# course_work_4_API

./: .gitignore  README.md  main.py  pyproject.toml
entity/: abstract.py  api.py  head_hunter.py  json_saver.py  super_job.py  vacancy.py
src/: main.py
src/entity/: utils.py  vacancy_utils.py
src/entity/classes/: abstract.py  head_hunter.py  j_servers.py  json_saver.py  salary.py  super_job.py  vacancy.py
src/parsed_data/: hh_vacancies.json  sj_vacancies.json
