[tool.poetry]
name = "course-work-4-api"
version = "0.1.0"
description = ""
authors = ["Mikhail Polyakov PyCharm <mikhapol@bk.ru>"]
readme = "README.md"
packages = [{include = "course_work_4_api"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
